Added new things for lab 16

--- a/templates/my_template.html
+++ b/templates/my_template.html
@@ -11,7 +11,11 @@
     <p>This is my current template</p>
 
     <div class="text-center">
-        <img src="static/gametwo.jpg" class="rounded w-50">
+        <img src="/static/gametwo.jpg" class="rounded w-50">
+    </div>
+
+    <div class="text-center">
+        <img src="/static/game.jpeg" class="img-fluid w-75">
     </div>
 
 
