--- a/templates/my_template.html
+++ b/templates/my_template.html
@@ -14,6 +14,7 @@
         <img src="/static/gametwo.jpg" class="rounded w-50">
     </div>
 
+    <!-- Task 1 & 2 For Lab 16 -->
     <div class="text-center">
         <img src="/static/game.jpeg" class="img-fluid w-75">
     </div>
